--- a/src/pretix/control/templates/pretixcontrol/event/settings.html
+++ b/src/pretix/control/templates/pretixcontrol/event/settings.html
@@ -28,7 +28,9 @@
         <fieldset>
             <legend>{% trans "Timeline" %}</legend>
             {% bootstrap_field form.presale_start layout="horizontal" %}
+            {% bootstrap_field sform.presale_start_show_date layout="horizontal" %}
             {% bootstrap_field form.presale_end layout="horizontal" %}
+            {% bootstrap_field sform.show_items_outside_presale_period layout="horizontal" %}
             {% bootstrap_field sform.payment_term_days layout="horizontal" %}
             {% bootstrap_field sform.payment_term_last layout="horizontal" %}
             {% bootstrap_field sform.payment_term_accept_late layout="horizontal" %}
