--- a/src/pretix/presale/templates/pretixpresale/event/order.html
+++ b/src/pretix/presale/templates/pretixpresale/event/order.html
@@ -24,6 +24,31 @@
             </div>
         </div>
     {% endif %}
+    {% if order.status == 'p' and event.settings.ticket_download %}
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title">{% trans "Ticket download" %}</h3>
+            </div>
+            <div class="panel-body">
+                {% if can_download %}
+                    <p>
+                        {% blocktrans trimmed %}
+                            Please use the buttons below to obtain your ticket. Please have your ticket ready when
+                            entering the event.
+                        {% endblocktrans %}
+                    </p>
+                    <a href="{% url "presale:event.order.download" organizer=request.event.organizer.slug event=request.event.slug order=order.code %}"
+                            class="btn btn-primary">
+                        <span class="fa fa-print"></span> {% trans "Download PDF" %}
+                    </a>
+                {% else %}
+                    {% blocktrans trimmed with date=event.settings.ticket_download_date|date %}
+                        You will be able to download your tickets here on {{ date }}.
+                    {% endblocktrans %}
+                {% endif %}
+            </div>
+        </div>
+    {% endif %}
     <div class="panel panel-primary cart">
         <div class="panel-heading">
             {% if order.can_modify_answers %}
