Add basic sale statistics (closes #57)

--- a/src/pretix/control/static/pretixcontrol/less/main.less
+++ b/src/pretix/control/static/pretixcontrol/less/main.less
@@ -6,6 +6,7 @@
 @import "sb-admin-2.less";
 @import "forms.less";
 @import "flags.less";
+@import "orders.less";
 
 footer {
     text-align: center;
