--- a/src/pretix/control/templates/pretixcontrol/event/base.html
+++ b/src/pretix/control/templates/pretixcontrol/event/base.html
@@ -81,11 +81,25 @@
         </ul>
     </li>
     <li>
-        <a href="{% url 'control:event.orders' organizer=request.event.organizer.slug event=request.event.slug %}"
-                {% if "event.order" in url_name %}class="active"{% endif %}>
+        <a href="#">
             <i class="fa fa-shopping-cart fa-fw"></i>
             {% trans "Orders" %}
+            <span class="fa arrow"></span>
         </a>
+        <ul class="nav nav-second-level">
+            <li>
+                <a href="{% url 'control:event.orders' organizer=request.event.organizer.slug event=request.event.slug %}"
+                        {% if url_name == "event.orders" or "event.order." in url_name %}class="active"{% endif %}>
+                    {% trans "All orders" %}
+                </a>
+            </li>
+            <li>
+                <a href="{% url 'control:event.orders.overview' organizer=request.event.organizer.slug event=request.event.slug %}"
+                   {% if url_name == "event.orders.overview" %}class="active"{% endif %}>
+                    {% trans "Overview" %}
+                </a>
+            </li>
+        </ul>
     </li>
     {% for nav in nav_event %}
         <li>
