Make plugin dependencies optional by allowing plugins to report errors

--- a/src/pretix/control/static/pretixcontrol/less/forms.less
+++ b/src/pretix/control/static/pretixcontrol/less/forms.less
@@ -14,6 +14,9 @@ td > .form-group > .checkbox {
 .has-success .form-control {
 	border-color: #cccccc;
 }
+.panel-body div.alert:last-child {
+    margin-bottom: 0;
+}
 .form-horizontal [data-formset] .form-group {
 	width: 100%;
 }
