Add a plugin API for ticket outputs

--- a/src/pretix/control/templates/pretixcontrol/event/tickets.html
+++ b/src/pretix/control/templates/pretixcontrol/event/tickets.html
@@ -13,6 +13,27 @@
             <legend>{% trans "Ticket download" %}</legend>
             {% bootstrap_field form.ticket_download layout="horizontal" %}
             {% bootstrap_field form.ticket_download_date layout="horizontal" %}
+            {% for provider in providers %}
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <div class="row">
+                            <div class="col-sm-10">
+                                <h3 class="panel-title">{{ provider.verbose_name }}</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel-body">
+                        {%  bootstrap_form provider.form layout='horizontal' %}
+                        {% with c=provider.settings_content %}
+                            {% if c %}{{ c|safe }}{% endif %}
+                        {% endwith %}
+                    </div>
+                </div>
+            {% empty %}
+                <div class="alert alert-warning">
+                    {% trans "There are no ticket outputs available. Please go to the plugin settings and activate one or more ticket output plugins." %}</em>
+                </div>
+            {% endfor %}
         </fieldset>
         <div class="form-group submit-group">
             <button type="submit" class="btn btn-primary btn-save">
