Serve static files

--- a/src/pretix/control/static/pretixcontrol/less/auth.less
+++ b/src/pretix/control/static/pretixcontrol/less/auth.less
@@ -1,4 +1,4 @@
-@import "../../../../base/static/bootstrap/less/bootstrap.less";
+@import "../../bootstrap/less/bootstrap.less";
 
 body {
 	background: #eee;
