--- a/src/pretix/presale/static/pretixpresale/less/main.less
+++ b/src/pretix/presale/static/pretixpresale/less/main.less
@@ -1,5 +1,5 @@
-@import "../../../../base/static/bootstrap/less/bootstrap.less";
-@import "../../../../base/static/fontawesome/less/font-awesome.less";
+@import "../../bootstrap/less/bootstrap.less";
+@import "../../fontawesome/less/font-awesome.less";
 @fa-font-path: "../../fontawesome/fonts";
 
 @import "event.less";
