--- a/src/pretix/control/templates/pretixcontrol/organizers/create.html
+++ b/src/pretix/control/templates/pretixcontrol/organizers/create.html
@@ -1,9 +1,9 @@
 {% extends "pretixcontrol/base.html" %}
 {% load i18n %}
 {% load bootstrap3 %}
-{% block title %}{% trans "Create Organizer" %}{% endblock %}
+{% block title %}{% trans "Create a new organizer" %}{% endblock %}
 {% block content %}
-	<h1>{% trans "Create Organizer" %}</h1>
+	<h1>{% trans "Create a new organizer" %}</h1>
     <form action="" method="post" class="form-horizontal">
         {% csrf_token %}
         <fieldset>
