Fix empty title

--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -1,5 +1,6 @@
 {% extends "pretixpresale/event/base.html" %}
 {% load i18n %}
+{% block title %}{% trans "Presale" %}{% endblock %}
 
 {% block content %}
     {% if cart.positions %}
