Fix text flow in header (fixes #63)

--- a/src/pretix/presale/static/pretixpresale/less/main.less
+++ b/src/pretix/presale/static/pretixpresale/less/main.less
@@ -12,11 +12,14 @@ footer {
 }
 .page-header {
     position: relative;
-}
-.page-header .loginbox {
-    position: absolute;
-    right: 0;
-    bottom: 20px;
+    padding-bottom: 9px;
+
+    h1 {
+        margin: 0;
+    }
+    .loginbox {
+        padding-top: 15px;
+    }
 }
 .js-only {
     display: none;
