--- a/src/pretix/presale/templates/pretixpresale/event/base.html
+++ b/src/pretix/presale/templates/pretixpresale/event/base.html
@@ -19,6 +19,10 @@
 <body>
 <div class="container event">
     <div class="page-header">
+        <h1 class="pull-left">
+            {{ event.name }}
+            <small>{{ event.date_from|date }}{% if event.settings.show_date_to %} – {{ event.date_to|date }}{% endif %}</small>
+        </h1>
         <div class="pull-right loginbox">
             {% if request.event.settings.locales|length > 1 %}
                 <div class="locales">
@@ -44,7 +48,7 @@
                     {% trans "Login" %}</a>
             {% endif %}
         </div>
-        <h1>{{ event.name }} <small>{{ event.date_from|date }}{% if event.settings.show_date_to %} – {{ event.date_to|date }}{% endif %}</small></h1>
+        <div class="clearfix"></div>
     </div>
     {% if messages %}
         {% for message in messages %}
