Allow to adjust the order of products (closes #60)

--- a/src/pretix/control/templates/pretixcontrol/items/index.html
+++ b/src/pretix/control/templates/pretixcontrol/items/index.html
@@ -4,6 +4,13 @@
 {% block inside %}
 	<h1>{% trans "Products" %}</h1>
     <p>
+        {% blocktrans trimmed %}
+            Below, you find a list of all available products. You can click on a product name to inspect and change
+            product details. You can also use the buttons on the right to change the order of products within a
+            give category.
+        {% endblocktrans %}
+    </p>
+    <p>
         <a href="{% url "control:event.items.add" organizer=request.event.organizer.slug event=request.event.slug %}"
                 class="btn btn-default"><i class="fa fa-plus"></i> {% trans "Create new product" %}</a>
     </p>
@@ -12,16 +19,24 @@
 			<tr>
 				<th>{% trans "Product name" %}</th>
 				<th>{% trans "Category" %}</th>
+                <th></th>
 			</tr>
 		</thead>
 		<tbody>
-			{% for i in items %}
-			<tr>
-				<td><strong><a href="
-				{% url "control:event.item" organizer=request.event.organizer.slug event=request.event.slug item=i.identity %}">{{ i.name }}</a></strong></td>
-				<td>{% if i.category %}{{ i.category.name }}{% endif %}</td>
-			</tr>
-			{% endfor %}
+            {% regroup items by category as cat_list %}
+            {% for c in cat_list %}
+                {% for i in c.list %}
+                <tr>
+                    <td><strong><a href="
+                    {% url "control:event.item" organizer=request.event.organizer.slug event=request.event.slug item=i.identity %}">{{ i.name }}</a></strong></td>
+                    <td>{% if i.category %}{{ i.category.name }}{% endif %}</td>
+                    <td>
+                        <a href="{% url "control:event.items.up" organizer=request.event.organizer.slug event=request.event.slug item=i.identity %}" class="btn btn-default btn-sm {% if forloop.counter0 == 0 %}disabled{% endif %}"><i class="fa fa-arrow-up"></i></a>
+                        <a href="{% url "control:event.items.down" organizer=request.event.organizer.slug event=request.event.slug item=i.identity %}" class="btn btn-default btn-sm {% if forloop.revcounter0 == 0 %}disabled{% endif %}"><i class="fa fa-arrow-down"></i></a>
+                    </td>
+                </tr>
+                {% endfor %}
+            {% endfor %}
 		</tbody>
 	</table>
     {% include "pretixcontrol/pagination.html" %}
