Added configuration options for imprint URL and contact email address

--- a/src/pretix/control/templates/pretixcontrol/event/settings.html
+++ b/src/pretix/control/templates/pretixcontrol/event/settings.html
@@ -19,6 +19,8 @@
             {% bootstrap_field sform.timezone layout="horizontal" %}
             {% bootstrap_field sform.show_date_to layout="horizontal" %}
             {% bootstrap_field sform.show_times layout="horizontal" %}
+            {% bootstrap_field sform.contact_mail layout="horizontal" %}
+            {% bootstrap_field sform.imprint_url layout="horizontal" %}
         </fieldset>
         <fieldset>
             <legend>{% trans "Timeline" %}</legend>
