--- a/src/pretix/control/templates/pretixcontrol/auth/register.html
+++ b/src/pretix/control/templates/pretixcontrol/auth/register.html
@@ -3,17 +3,19 @@
 {% load i18n %}
 {% block content %}
 	<form class="form-signin" action="" method="post">
+        <h3>{% trans "Create a new account" %}</h3>
 		{% bootstrap_form_errors form type='all' layout='inline' %}
 		{% csrf_token %}
 		{% bootstrap_field form.email %}
 		{% bootstrap_field form.password %}
+        {% bootstrap_field form.password_repeat %}
 		<div class="form-group buttons">
-            <a href="{% url "control:auth.register" %}" class="btn btn-link">
-                {% trans "Register" %}
+            <a href="{% url "control:auth.login" %}" class="btn btn-link">
+                &laquo; {% trans "Login" %}
             </a>
 
 			<button type="submit" class="btn btn-primary">
-				{% trans "Log in" %}
+				{% trans "Register" %}
 			</button>
 		</div>
 	</form>
