--- a/src/pretix/control/templates/pretixcontrol/event/settings.html
+++ b/src/pretix/control/templates/pretixcontrol/event/settings.html
@@ -43,6 +43,7 @@
         </fieldset>
         <fieldset>
             <legend>{% trans "E-Mail settings" %}</legend>
+            {% bootstrap_field sform.mail_prefix layout="horizontal" %}
             {% bootstrap_field sform.mail_from layout="horizontal" %}
         </fieldset>
         <div class="form-group submit-group">
